--- a/client/vues/application/carnetEtu.html
+++ b/client/vues/application/carnetEtu.html
@@ -46,7 +46,7 @@
 									<center><td><b>{{ titre }}</b></td></center>
 									<p></p>
 								</tr>
-								<table class="table" id="table">
+								<table class="table" id="table" style="display:none;">
 									<tbody>
 										<tr class="rowToClick2">
 											<td colspan="2"><i>General</i></td>
@@ -119,8 +119,6 @@
 	</body>
 	<script type="text/javascript" src="/jquery-latest.js"></script> 
 	<script>
-
-	
 	$(document).ready(function()
 	 {
 
